# agentic-german

./: .gitignore  README.md  main.py  pyproject.toml
.cursor/rules/: uv-package-manager.mdc
src/: schemas.py
src/agents/: anki_agent.py  dictation_agent.py  get_item_agent.py  image_downloader_agent.py  word_context_agent.py  word_pronunciation_agent.py  word_type_agent.py
src/agents/config/: __init__.py  agent_workflow.py  create_agent.py  human_input.py  llm_config.py  schemas.py  termination_message.py
src/functions/: __init__.py
src/functions/anki_utils/: __init__.py  add_word_to_anki.py
src/functions/audio_utils/: __init__.py  process_pronunciation_batch.py  save_audio_data.py  text_to_speech_narakeet.py
src/functions/image_utils/: __init__.py  save_image_from_url.py
src/functions/pdf_utils/: __init__.py  pdf_to_markdown.py  transform_german_chars.py
src/functions/word_management/: __init__.py  fetch_word_context.py  get_current_word.py  get_next_word_from_current_word.py
tests/: test_add_word_and_get_next.py  test_get_current_word.py  test_get_next_unlearned_word.py  test_get_next_word_from_current_word.py  test_word_utils.py
