[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snd-agent-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ag2[gemini,openai]>=0.9.4",
    "aiohttp>=3.12.13",
    "apyanki>=0.17.1",
    "mlflow>=3.1.1",
    "openai>=1.0.0",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pypdf>=5.7.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]

